@@ -125,12 +125,12 @@ AC_SUBST(xfrdfile)
 #
 # Determine default chroot directory
 #
-chrootdir="/"
 AC_ARG_WITH([chroot],
 	AC_HELP_STRING([--with-chroot=dir], [NSD default chroot directory]),
-	[chrootdir=$withval])
-AC_SUBST(chrootdir)
-AC_DEFINE_UNQUOTED(CHROOTDIR, ["`eval echo $chrootdir`"], [NSD default chroot directory.])
+	[
+		chrootdir=$withval
+		AC_DEFINE_UNQUOTED(CHROOTDIR, ["$chrootdir"], [NSD default chroot directory])
+	])
 
 #
 # Determine the user name to drop privileges to
